# customer_churn_streamlit

./: Customer_churn_using_ANN.ipynb  README.md  churn_model.keras  pyproject.toml  venv_activation.txt
logs/fit/train/: events.out.tfevents.1739630303.DESKTOP-9ER1LAM.8260.2.v2  events.out.tfevents.1739630923.DESKTOP-9ER1LAM.8260.4.v2  events.out.tfevents.1739644641.DESKTOP-9ER1LAM.20712.0.v2
logs/fit/validation/: events.out.tfevents.1739630304.DESKTOP-9ER1LAM.8260.3.v2  events.out.tfevents.1739630923.DESKTOP-9ER1LAM.8260.5.v2  events.out.tfevents.1739644647.DESKTOP-9ER1LAM.20712.1.v2
logs/fit20250215-195401/train/: events.out.tfevents.1739629690.DESKTOP-9ER1LAM.8260.0.v2
logs/fit20250215-195401/validation/: events.out.tfevents.1739629696.DESKTOP-9ER1LAM.8260.1.v2
